# plc

./: .env.example  .gitignore  README.md  arch.md  pipeline.py  pyproject.toml  requirements.txt
docs/: README.md  overview.md  questions.md  routines.md  tags.md
results/: eval_anthropic_20260301_093815.txt  eval_openai_20260301_092631.txt  openai_vs_anthropic_overview.md
scripts/: run_benchmark.py  run_call_graph.py  run_evaluation.py  run_extraction.py  run_grep.py  run_pipeline.py
src/: pipeline.py
src/agents/: __init__.py  answer_composer.py  extraction.py  judge.py
src/ingestion/: __init__.py  tag_index.py
src/tools/: __init__.py  call_graph_builder.py  deduplicate_blocks.py  grep.py  questions_ref.py  tags_lookup.py
test/: extraction_test.py  grep_test.py  run_evaluation.py  run_pipeline.py  test_call_graph_builder.py  test_extraction.py
